--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vitest/coverage-v8": "^1.3.1",
     "typescript": "^5.3.3",
     "vitest": "^1.3.1"
   }
