--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
             "ESNext",
             "DOM",
             "DOM.Iterable"
+        ],
+        "types": [
+            "vitest"
         ]
     },
     "include": [
