--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/react": "^18.2.61",
     "@vitest/coverage-v8": "^1.3.1",
+    "react": "^18.2.0",
     "typescript": "^5.3.3",
     "vitest": "^1.3.1"
   }
